--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
-        "ctype.h": "c"
+        "ctype.h": "c",
+        "string.h": "c"
     },
     "C_Cpp.errorSquiggles": "enabled",
     "problems.showCurrentInStatus": true,
