--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,6 +54,8 @@
         "sstream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "stdio.h": "c",
+        "string.h": "c"
     }
 }
